<resources>
    <string name="app_name">ReadingMood</string>
    <string name="button_send">Start</string>
    <string name="Author1">Thierry Bécart</string>
    <string name="Author2">Clément Bernard</string>
    <string name="Author3">Thomas Chêne</string>
    <string name="Author4">Frank Facundo</string>
    <string name="Author5">Khaled Grira</string>
    <string name="Author6">Thiziri Nait Saada</string>
    <string name="pagePrincipalAuteurs">Authors</string>
    <string name="Logo">logo</string>
    <string name="resume_value">Resume</string>
    <string name="collection_value">My Collection</string>
    <string name="resume_content">Un click permet de reprendre la lecture</string>
    <string name="my_library_title">Library</string>
    <string name="atmosphere_title">Atmosphere</string>
    <string name="settings_title">Settings</string>
    <array name="atmosphere_liste">
        <item>@drawable/administration</item>
        <item>@drawable/anger</item>
        <item>@drawable/attic</item>
        <item>@drawable/bathroom</item>
        <item>@drawable/bedroom</item>
        <item>@drawable/calm</item>
        <item>@drawable/car</item>
        <item>@drawable/castle</item>
        <item>@drawable/cave</item>
        <item>@drawable/cemetery</item>
        <item>@drawable/church</item>
        <item>@drawable/circus</item>
        <item>@drawable/company</item>
        <item>@drawable/countrytown</item>
        <item>@drawable/desert</item>
        <item>@drawable/fear</item>
        <item>@drawable/field</item>
        <item>@drawable/fight</item>
        <item>@drawable/fog</item>
        <item>@drawable/forest</item>
        <item>@drawable/garden</item>
        <item>@drawable/gunshot</item>
        <item>@drawable/gym</item>
        <item>@drawable/happy</item>
        <item>@drawable/hospital</item>
        <item>@drawable/industry</item>
        <item>@drawable/jail</item>
        <item>@drawable/kitchen</item>
        <item>@drawable/library</item>
        <item>@drawable/livingroom</item>
        <item>@drawable/love</item>
        <item>@drawable/meadow</item>
        <item>@drawable/mine</item>
        <item>@drawable/mountain</item>
        <item>@drawable/ocean</item>
        <item>@drawable/plane</item>
        <item>@drawable/rain</item>
        <item>@drawable/sad</item>
        <item>@drawable/school</item>
        <item>@drawable/snow</item>
        <item>@drawable/street</item>
        <item>@drawable/sun</item>
        <item>@drawable/thunder</item>
        <item>@drawable/trainstation</item>
        <item>@drawable/wind</item>
    </array>
    <array name="atmosphere_liste_smell">
        <item>@drawable/agriculture_smell</item>
        <item>@drawable/christmas_smell</item>
        <item>@drawable/cook_smell</item>
        <item>@drawable/forest_smell</item>
        <item>@drawable/flower_garder_smell</item>
        <item>@drawable/ocean_smell</item>

    </array>

    <array name="harry_potter_covers">
        <item>@drawable/harry_potter</item>
        <item>@drawable/harry_potter_2</item>
        <item>@drawable/harry_potter_3</item>
    </array>


    <!--   For NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="book_picture">Here is the first cover of the book</string>

    <array name="atmosphere_song">
        <item>@raw/administration</item>
        <item>@raw/anger</item>
        <item>@raw/attic</item>
        <item>@raw/bathroom</item>
        <item>@raw/bedroom</item>
        <item>@raw/calm</item>
        <item>@raw/car</item>
        <item>@raw/castle</item>
        <item>@raw/cave_fear</item>
        <item>@raw/cemetry</item>
        <item>@raw/church</item>
        <item>@raw/circus</item>
        <item>@raw/company</item>
        <item>@raw/countrytown</item>
        <item>@raw/desert</item>
        <item>@raw/fear</item>
        <item>@raw/field</item>
        <item>@raw/fight</item>
        <item>@raw/fog</item>
        <item>@raw/forest</item>
        <item>@raw/garden</item>
        <item>@raw/gunshot</item>
        <item>@raw/gym</item>
        <item>@raw/happy</item>
        <item>@raw/hospital</item>
        <item>@raw/industry</item>
        <item>@raw/jail</item>
        <item>@raw/kitchen</item>
        <item>@raw/library</item>
        <item>@raw/livingroom</item>
        <item>@raw/love</item>
        <item>@raw/meadow</item>
        <item>@raw/mine</item>
        <item>@raw/mountain</item>
        <item>@raw/ocean</item>
        <item>@raw/plane</item>
        <item>@raw/rain</item>
        <item>@raw/sad</item>
        <item>@raw/school</item>
        <item>@raw/snow</item>
        <item>@raw/street</item>
        <item>@raw/sun</item>
        <item>@raw/thunder</item>
        <item>@raw/trainstation</item>
        <item>@raw/wind</item>
    </array>


    <array name="list_name_book_input">

        <item>@raw/hp1c</item>
        <item>@raw/hp2c</item>
        <item>@raw/hp3c</item>
        <item>@raw/hp1q</item>
        <item>@raw/hp2q</item>
        <item>@raw/hp3q</item>

    </array>


    <string-array name="letters_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>


    </string-array>


    <string-array name="font_array">

        <item> Amatic  </item>
        <item>Just Another Hand</item>
        <item>Kalam</item>
        <item>Kalam (light)</item>
        <item>Karla</item>
        <item>Karla (light)</item>
        <item>Mont Serrat</item>
        <item>Mukta</item>
        <item>Open Sans Regular</item>
        <item>Oxygen</item>
        <item>PT Serif</item>
        <item>Roboto</item>
        <item>Sarabun</item>
        <item>Sofia</item>
        <item>Source Sans Pro</item>
        <item>Classic </item>


    </string-array>

    <string-array name="size_array">

        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>

    </string-array>


    <string-array name="list_name_book_url">

        <item> hp1c</item>
        <item> hp2c </item>
        <item> hp3c </item>
        <item>  hp1q</item>
        <item>  hp2q</item>
        <item>  hp3q</item>


    </string-array>

    <array name="photo_pact">
        <item>@drawable/thierry</item>
        <item>@drawable/bernard</item>
        <item>@drawable/thomas</item>
        <item>@drawable/frank_magic</item>
        <item>@drawable/khaled</item>
        <item>@drawable/thiziri</item>

    </array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="enjoy_reading_with_your_smartphone">Enjoy Reading with your Smartphone</string>
    <string name="discover">Discover</string>


</resources>
